AUTHORS: Add shjourney authors to file
Keep lines sorted alphabetically.

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,5 +8,10 @@
 # SPDX-FileCopyrightText: NONE
 # SPDX-License-Identifier: CC0-1.0
 Endless Access LLC
-Omar Mendez
+Gian Piero Daniel Cano Espejo
+Joseph Montes de Oca Untiveros
+Leonardo Jesus Contreras Moriano
+Leopoldo Josue Brito Ruiz
 Miguel Navarro
+Omar Mendez
+Shirley Torres
