--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,8 @@
 # SPDX-FileCopyrightText: NONE
 # SPDX-License-Identifier: CC0-1.0
 Endless Access LLC
+Aurelia Kornheiser
+Felix Walberg
 Gian Piero Daniel Cano Espejo
 Joseph Montes de Oca Untiveros
 Leonardo Jesus Contreras Moriano
@@ -15,3 +17,4 @@ Leopoldo Josue Brito Ruiz
 Miguel Navarro
 Omar Mendez
 Shirley Torres
+Spenser Kramer
